Epilogger.Web/Public/css/sadiehawkins.css
/* ... */
#event-toolbar .tool-tip .nub {position:absolute;top:8px;left:0;width:5px;height:23px;background: url(../images/icons/hovernub.png) no-repeat;}
#event-toolbar .tool-tip .tip {position:absolute;top:0;left:5px;height:17px;background:#2d8ac5;padding:4px 5px 2px 5px;text-transform:lowercase;} 

fieldset.login label, fieldset.forgotpassword label {padding:8px;width:70px;text-transform:uppercase;font-size:11px;}
fieldset.forgotpassword label {width:100px;}
fieldset.forgotpassword label, fieldset.login label, fieldset.forgotpassword input[type="text"],fieldset.forgotpassword input[type="password"] 
fieldset.login input[type="text"], fieldset.login input[type="password"] {float:left;}

fieldset.forgotpassword input[type="text"],fieldset.forgotpassword input[type="password"],
fieldset.login input[type="text"], fieldset.login input[type="password"] 
{width:340px; background:#e1e1e1}

fieldset.login p.rememberme, fieldset.login p.submit {padding-left:82px;}
fieldset.forgotpassword p.submit {padding-left:112px;}
fieldset.login label.left {width:auto !important;padding:2px 0;}

/* --- New Event Details Menu -- */
/*ul#EventDetailsMenu {  }
ul#EventDetailsMenu li { display:inline-block; padding: 0; margin:0;}
ul#EventDetailsMenu li a { color:#000; padding: 0; text-transform:uppercase; margin: 0 20px; font-size: 12px;}
ul#EventDetailsMenu li a:hover, ul#navigation li a.current {  color:#858585; }*/

ul#EventDetailsMenu { display:block; list-style-type:none; border-bottom:1px solid #c7c7c7;}
ul#EventDetailsMenu li { float:left; padding:0; margin-right:25px; }
ul#EventDetailsMenu li a { padding-bottom:10px;text-transform:uppercase; color:#000; font-size:11px;}
ul#EventDetailsMenu li a.active { color:#888;}
ul#EventDetailsMenu li a:hover,
ul#EventDetailsMenu li a.current {  color:#858585;background:url(../images/jaggie-icons/event-menu-jaggie.gif) no-repeat bottom center;}


/*CREATE ACCOUNT*/
fieldset.create label {width:100px;text-transform:uppercase;font-size:11px;}
fieldset.create label, fieldset.create select, fieldset.create input[type="text"], fieldset.create input[type="password"] {float:left;}
fieldset.create input[type="text"], fieldset.create select, fieldset.create input[type="password"] {width:300px}
fieldset.create select { width:310px;}
fieldset.create p.rememberme, fieldset.create p.submit {padding-left:82px;}
fieldset.create label.left {width:auto !important;}
fieldset.create p#confirmPW label {position:relative; top:-4px; line-height:13px}

.createArrow { background: url('../images/icons/CreateAccountArrow.png') no-repeat; height: 350px; background-position: 0 65px; }
.createAccountButton { position:relative; top: 155px; left: 80px; height: 40px; }
.createAccountButton:hover { top: 156px;}


/* ------------------------------ DASHBOARD */
#dashboard-nav {
    float:left;
    width:268px;
    margin-right:17px;}

ul#left-nav {
    margin:30px 0;}
    
ul#left-nav li {
    list-style:none;}

ul#left-nav li a {
    font:normal 18px 'InterstatePlusRegular', arial, sans-serif;
    text-transform:uppercase;
    padding:10px;
    display:block;
    border-bottom:1px solid #fff}
    
ul#left-nav li a:hover, ul#left-nav li a.current {
    color:#fc5daf;
    background:#f6f6f6;
    border-bottom:solid 1px #bdbdbd;
    text-decoration:none}
ul#left-nav li a.current.no-border {border-bottom:none;}
ul#left-nav li ul {border-bottom:solid 1px #bdbdbd;background:#f6f6f6;}
ul#left-nav li ul li {padding-left:20px;}
ul#left-nav li ul li a {border:none !important;font-size:15px;color:#e17cb1;padding:5px;}
ul#left-nav li ul li a:hover,
ul#left-nav li ul li a.current {color:#a44b79;}

#dashboard-content {
    float:left;
    width:641px;}
    
.dashboard-activity-entry {
    float:left;
    height:140px;
    overflow:hidden;
    margin:0px 20px 20px 0px;
    width:185px;
    color:#828282;}
    
.dashboard-activity-entry h2 a { color: #f51282;}
.dashboard-activity-entry h2 a:hover { text-decoration: underline; }
    
.dashboard-activity-entry strong.title {
    color:#5086b9;
    margin-bottom:10px;
    padding-left:24px;
    background:url('../images/event_activity_title_icons.png') no-repeat;
    font-size:12px;
    font-weight:normal;
    text-transform:uppercase;
    margin-bottom:5px;
    display:block;}
    
.dashboard-activity-entry strong.title.TWEET {
    background-position:0 0;}
    
.dashboard-activity-entry strong.title.PHOTOS_VIDEOS {
    background-position:0 -50px;
    padding-left:28px;}
    
.dashboard-activity-entry strong.title.EVENT_CREATION {
    background-position:0 -100px;
    padding-left:28px;}

#homepage-content {float:left;width:880px;}

.homepage-activity-entry { 
    float:left;
    width:216px;
    height:218px;
    overflow:hidden;
    margin:0px 20px 20px 0px;
    color:#828282; 
    background:url(../images/homepage/feed.bg.png) no-repeat;}

.homepage-activity-entry h2 {
    margin:10px;
    padding:10px 10px 0 10px;
}

.homepage-activity-entry img {
    width:196px;height:161px;margin:10px;}
    
.homepage-activity-entry h2 a { color: #f51282;}
.homepage-activity-entry h2 a:hover { text-decoration: underline; }
.homepage-activity-entry strong.title {font-weight:normal; color:#5086b9;margin:0px 0px 10px 10px;padding-left:24px;background-image:url(../images/event_activity_title_icons.png);background-repeat: no-repeat;font-size:12px;text-transform:uppercase;margin-bottom:5px;display:block; }
.homepage-activity-entry strong.title.TWEET {background-position:0 0;}
.homepage-activity-entry strong.title.PHOTOS_VIDEOS { background-position:0 -50px;padding-left:28px; }
.homepage-activity-entry strong.title.EVENT_CREATION {background-position:0 -100px;padding-left:28px;}

.profile-card {margin-bottom:10px;}
.profile-card h4 {background:#fe60b1;color:#fff;float:left;padding:5px 10px 5px 10px;}
.profile-data {background:#dcdcdc;padding:10px;border-top:solid 5px #fe60b1;margin:-5px 0px 10px 0px;}
.profile-data .profile-picture {margin-right:20px;}
.profile-picture { height: 150px; }
/* ... */

